--- a/style.css
+++ b/style.css
@@ -957,7 +957,7 @@ noscript {
 
 @media only screen and (max-width: 768px) {
     .about-section-containery {
-        padding-top: 0px
+        padding-top: 0px !important;
     }
   }
 
