--- a/style.css
+++ b/style.css
@@ -955,11 +955,19 @@ noscript {
     padding-top: 200px
 }
 
-@media only screen and (max-width: 768px) {
-    .about-section-containery {
-        padding-top: 0px !important;
+/* For tablets */
+@media (max-width: 768px) {
+    .about-section-container {
+        padding-top: 0;
     }
-  }
+}
+
+/* For mobile phones */
+@media (max-width: 480px) {
+    .about-section-container {
+        padding-top: 0;
+    }
+}
 
 .about-section,
 .projects-section-div,
@@ -1161,6 +1169,22 @@ footer {
     align-items: center;
     justify-content: center;
     width: 100%
+}
+
+/* For tablets */
+@media (max-width: 768px) {
+    .projects-section-container {
+        padding-top: 80;
+        padding-bottom: 50px;
+    }
+}
+
+/* For mobile phones */
+@media (max-width: 480px) {
+    .projects-section-container {
+        padding-top: 80;
+        padding-bottom: 50px;
+    }
 }
 
 .project-boxes-div {
@@ -1371,6 +1395,20 @@ footer {
     align-items: flex-end;
     justify-content: center;
     backdrop-filter: blur(10px)
+}
+
+/* For tablets */
+@media (max-width: 768px) {
+    .footer-foreground {
+        height: 85vh;
+    }
+}
+
+/* For mobile phones */
+@media (max-width: 480px) {
+    .footer-foreground {
+        height: 85vh;
+    }
 }
 
 .footercontainer {
